[gd_scene load_steps=12 format=3 uid="uid://dq11omgyd2frp"]

[ext_resource type="Script" uid="uid://b1ofr4umso5jf" path="res://src/systems/scenes/game/game_scene.gd" id="1_k8n8a"]
[ext_resource type="PackedScene" uid="uid://ryhx8o46er7i" path="res://src/player/2D/madotsuki/madotsuki.tscn" id="5_f6176"]
[ext_resource type="Script" uid="uid://c1od80bn28h0l" path="res://src/systems/sequencing/sequence_interface.gd" id="8_ha680"]
[ext_resource type="Script" uid="uid://dxx2gbg56i1ts" path="res://src/systems/sequencing/event/scene/apply_panorama.gd" id="9_a37wq"]
[ext_resource type="Texture2D" uid="uid://bhfp4xsgl4dhe" path="res://src/images/panorama/2kki_nexus.png" id="10_ha680"]
[ext_resource type="Shader" uid="uid://dqxrs4a4y611c" path="res://src/shaders/panorama/linear.gdshader" id="10_yxj6a"]
[ext_resource type="Script" uid="uid://ctqw6a8qsvnv4" path="res://src/systems/sequencing/event/audio/play_bgm.gd" id="11_wriwk"]
[ext_resource type="AudioStream" uid="uid://b4ccjxsuwusfl" path="res://src/audio/bgm/2kki_zaza.wav" id="12_yxj6a"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_kciqk"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_f6176"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_x5uc4"]
shader = ExtResource("10_yxj6a")
shader_parameter/dirX = 1.0
shader_parameter/dirY = -1.0
shader_parameter/scroll_speed = 0.04
shader_parameter/initial_uv_offset = Vector2(0, 0)
shader_parameter/snapped_val = 0.0016
shader_parameter/offset_strength = 0.0
shader_parameter/offset_strength_influence = Vector2(1, 1)

[node name="GameScene" type="Node" node_paths=PackedStringArray("seq_initial", "scene_objects")]
script = ExtResource("1_k8n8a")
seq_initial = NodePath("on_initial")
scene_objects = [NodePath("on_initial")]
load_transition = SubResource("ShaderMaterial_kciqk")
unload_transition = SubResource("ShaderMaterial_f6176")
metadata/_custom_type_script = "uid://b1ofr4umso5jf"

[node name="madotsuki" parent="." instance=ExtResource("5_f6176")]
position = Vector2(-180, -8)

[node name="Camera2D" type="Camera2D" parent="madotsuki"]

[node name="on_initial" type="Node" parent="."]
script = ExtResource("8_ha680")

[node name="Event" type="SubViewport" parent="on_initial"]
own_world_3d = true
transparent_bg = true
canvas_item_default_texture_filter = 0
canvas_item_default_texture_repeat = 2
size = Vector2i(480, 270)
size_2d_override = Vector2i(480, 270)
script = ExtResource("9_a37wq")

[node name="Sprite2D" type="Sprite2D" parent="on_initial/Event"]
material = SubResource("ShaderMaterial_x5uc4")
texture = ExtResource("10_ha680")
centered = false

[node name="Event2" type="Node" parent="on_initial" node_paths=PackedStringArray("prev")]
script = ExtResource("11_wriwk")
stream = ExtResource("12_yxj6a")
prev = NodePath("../Event")
metadata/_custom_type_script = "uid://0v2nidb8jsha"
